--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
-name: flutter_stetho
+name: stetho_network_inspector
 description: A network inspector for Flutter on Android using the Chrome Dev Tools
 version: 0.5.2
-author: Brian Egan <brian@brianegan.com>
-homepage: https://github.com/brianegan/flutter_stetho
+author: Anil Rao K <anil@anilraok.com>
+homepage: https://github.com/anilraok/stetho_network_inspector
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
 
 flutter:
   plugin:
