--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,6 +3,7 @@ description: Demonstrates how to use the flutter_stetho plugin.
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
