--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: https://github.com/anilraok/stetho_network_inspector
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
@@ -13,7 +14,7 @@ dependencies:
 
 flutter:
   plugin:
-    platform:
+    platforms:
       android:
         package: com.brianegan.flutterstetho
         pluginClass: FlutterStethoPlugin
