--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_stetho_example
-description: Demonstrates how to use the flutter_stetho plugin.
+description: Demonstrates how to use the stetho_network_inspector plugin.
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
