--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,8 @@
 group 'com.brianegan.flutterstetho'
 version '1.0-SNAPSHOT'
 buildscript {
+
+
     repositories {
         google()
         jcenter()
@@ -16,6 +18,7 @@ rootProject.allprojects {
         jcenter()
     }
 }
+
 apply plugin: 'com.android.library'
 android {
     compileSdkVersion 29
@@ -28,6 +31,11 @@ android {
         disable 'InvalidPackage'
     }
     dependencies {
-        implementation 'com.facebook.stetho:stetho:1.5.1'
+        implementation 'com.facebook.stetho:stetho:1.6.0'
+        implementation files('C:\\Users\\mariu\\flutter\\bin\\cache\\artifacts\\engine\\android-x64\\flutter.jar')
     }
+}
+
+dependencies {
+    implementation 'org.jetbrains:annotations-java5:23.0.0'
 }
